--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>เว็บแอป</title>
+    <title>เว็บแอประบบเช็คการมาสาย</title>
 </head>
 <body>
     <iframe style="width: 100%; height: 100vh;" scrolling="yes" src="https://script.google.com/macros/s/AKfycbxK1L3lEF5S2v42zJFXkExmqvV_dsdFuM5R8DVScLH5PLK4-Zg0JMc86tRVk-ROTyXcfw/exec" frameborder="0"></iframe>
